Bug 3934: Websockets: Scope ONE doesn't work correctly
Based on this patch, data change event in notification
contains also data, so there is no need for subsequent
request to get it. Change ported from Beryllium
and documented.

Change-Id: Ifce5ab7bf8f2c26e9d936ed9ab9eebe0b466abb7
Signed-off-by: Martin Ciglan <mciglan@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/controller/websocket-notifications.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/controller/websocket-notifications.adoc
@@ -113,15 +113,13 @@ Notifications are always in XML format and look like this:
         <data-change-event>
             <path xmlns:meae="http://netconfcentral.org/ns/toaster">/meae:toaster</path>
             <operation>updated</operation>
+            <data>
+                <!-- updated data -->
+            </data>
         </data-change-event>
     </data-changed-notification>
 </notification>
 ----
-
-NOTE: Notifications never contain data. They only contain information
-      about the path that was changed and what kind of operation
-      executed on that path. If you need data you should execute a
-      RESTCONF GET request on the path that was changed.
 
 ==== Example use case
 
