Beryllium updates to openstack-ovsdb
- Test commit.

Change-Id: Ic38bcc9afe39511c0e1c8a5db23f7e7f248d5394
Signed-off-by: Andre Fredette <afredette@redhat.com>

--- a/manuals/howto-openstack/src/main/asciidoc/openstack-ovsdb.adoc
+++ b/manuals/howto-openstack/src/main/asciidoc/openstack-ovsdb.adoc
@@ -4,7 +4,7 @@
 
 * On the control host, http://www.opendaylight.org/software/downloads[Download
   the latest OpenDaylight release] (at the time of writing, this is
-  0.2.1-Helium-SR1.1)
+  Beryllium)
 * Uncompress it as root, and start OpenDaylight (you can start OpenDaylight
   by running karaf directly, but exiting from the shell will shut it down):
 +
