Some last-minute cleanups for Beryllium docs
* Change name of Getting Started Guide to Installation Guide so that it does not
  overlap with the Getting Started Guide Denise has created
* Removing the release notes (which are about Lithium)
* Removing the outdated feature table (which is more accurate in Denise's
  Getting Started Guide)

Change-Id: I864d3831ad989661458ebf61123a0e601a345568
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -1,5 +1,5 @@
 [[bk-getting-started-guide]]
-= OpenDaylight Getting Started Guide
+= OpenDaylight Installation Guide
 :docinfo:
 
 //////////////////////////
@@ -57,7 +57,7 @@ the end of their file.
 // END COMMENT
 //////////////////////////
 
-include::release-notes.adoc[OpenDaylight Release Notes]
+// include::release-notes.adoc[OpenDaylight Release Notes]
 
 include::general_installation.adoc[]
 
