--- a/manuals/getting-started-guide/src/main/asciidoc/general_installation.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/general_installation.adoc
@@ -78,59 +78,59 @@ Multiple features can be installed using the following command:
 feature:install <feature1-name> <feature2-name> ... <featureN-name>
 -----
 
-.Beryllium Components
-[options="header",cols="18%,50%,18%,14%"]
-|====
-| Component Name                     | Component Description | Karaf feature name | Compatibility
-| ALTO                               | Enable support for Application-Layer Traffic Optimization | odl-alto-all | self+all
-| BGP                                | Enables support for BGP | odl-bgpcep-bgp-all | all
-| CAPWAP                             | Enables control of supported wireless APs | odl-capwap-ac-rest | all
-| DIDM                               | Device Identification and Driver Management | odl-didm-identification-api, odl-didm-identification, and odl-didm-drivers-api | all
-| Group Based Policy                 | Enable Endpoint Registry and Policy Repository REST APIs and associated functionality for Group Based Policy | odl-groupbasedpolicy-ofoverlay | self+all
-| Internet of Things Data Management | Enables support for the oneM2M specification | odl-iotdm-onem2m | all
-| L2 Switch                          | Provides L2 (Ethernet) forwarding across connected OppenFlow switches and support for host tracking | odl-l2switch-switch-ui | self+all
-| LACP                               | Enable support for the Link Aggregation Control Protocol | odl-lacp-ui | self+all
-| LISP Flow Mapping                  | Enable LISP control plane services including the mapping system services REST API and LISP protocol SB plugin | odl-lispflowmapping-all | all
-| MD-SAL Clustering                  | Provides support for operating a cluster of OpenDaylight instances | odl-mdsal-clustering | special
-| NETCONF over SSH                   | Provides support to manage NETCONF-enabled devices over SSH | odl-netconf-connector-ssh | all
-| Network Intent Composition         | Enable support for high-level network control via intents | odl-nic-core | self+all
-| OVS Management                     | Enables OVS management using OVSDB plugin and its associated OVSDB northbound APIs | odl-ovsdb-all | all
-| OVSDB OpenStack Neutron            | OpenStack Network Virtualization using OpenDaylight's OVSDB support | odl-ovsdb-openstack | self+all
-| OpFlex                             | Enables support for the OpFlex protocol | special (see user/developer guide) | all
-| OpenFlow Flow Programming          | Enables discovery and control of OpenFlow switches and the topology between them | odl-openflowplugin-flow-services-ui | all
-| OpenFlow Table Type Patterns       | Allows OpenFlow Table Type Patterns to be manually associated with network elements | odl-ttp-all | all
-| PCEP                               | Enables support for PCEP | odl-bgpcep-pcep-all | all
-| Packetcable PCMM                   | Enables flow-based dynamic QoS management of CMTS using in the DOCSIS infrastructure | odl-packetcable-all | self+all
-| Packetcable Policy Server          | Enables support for the PacketCable policy server | odl-packetcable-policy-server-all | self+all
-| RESTCONF API Support               | Enables REST API access to the MD-SAL including the data store | odl-restconf | all
-| SDN Interface                      | Provides support for interaction and sharing of state between (non-clustered) OpenDaylight instances | odl-sdninterfaceapp-all | all
-| SFC over L2                        | Supports implementing SFC using Layer 2 forwarding | odl-sfcofl2 | self+all
-| SFC over LISP                      | Supports implementing SFC using LISP | odl-sfclisp | all
-| SFC over REST                      | Supports implementing SFC using REST CRUD operations on network elements | odl-sfc-sb-rest | all
-| SFC over VXLAN                     | Supports implementing SFC using VXLAN tunnels | odl-sfc-ovs | self+all
-| SNMP Plugin                        | Enables monitoring and control of network elements via SNMP | odl-snmp-plugin | all
-| SNMP4SDN                           | Enables OpenFlow-like control of network elements via SNMP | odl-snmp4sdn-all | all
-| SSSD Federated Authentication      | Enable support for federated authentication using SSSD | odl-aaa-sssd-plugin | all
-| Secure Networking Bootstrap        | Defines a SNBI domain and associated white lists of devices to be accommodated to the domain | odl-snbi-all | self+all
-| Secure tag eXchange Protocol (SXP) | Enables distribution of shared tags to network devices | odl-sxp-controller | all
-| Service Flow Chaining (SFC)        | Enables support for applying chains of network services to certain traffic | odl-sfc-all | all
-| Time Series Data Repository (TSDR) | Enables historical tracking of OpenFlow statistics | odl-tsdr-all | self+all
-| Topology Processing Framework      | Enables merged and filtered views of network topologies | odl-topoprocessing-framework | all
-| Unified Secure Channel (USC)       | Enables support for secure, remote connections to network devices | odl-usc-channel-ui | all
-| VPN Service                        | Enables support for OpenStack VPNaaS | odl-vpnservice-core | all
-| VTN Manager                        | Enables Virtual Tenant Network support | odl-vtn-manager-rest | self+all
-| VTN Manager Neutron                | Enables OpenStack Neutron support of VTN Manager | odl-vtn-manager-neutron | self+all
-|====
-
-In the table a compatibility value of *all* means that it can be run with other features. A value of *self+all* indicates that the feature can be installed with other features with a value of *all*, but may interact badly other features with a value of *self+all*.
-
-.Experimental Beryllium Components
-[options="header",cols="18%,50%,18%,14%"]
-|====
-| Component Name                     | Component Description | Karaf feature name | Compatibility
-| Persistence                        | Enables saving of data to external databases | odl-persistence-api | self+all
-| Reservation                        | Enables bandwidth calendaring using the TL1 protocol | odl-reservation-models | all
-|====
+// .Beryllium Components
+// [options="header",cols="18%,50%,18%,14%"]
+// |====
+// | Component Name                     | Component Description | Karaf feature name | Compatibility
+// | ALTO                               | Enable support for Application-Layer Traffic Optimization | odl-alto-all | self+all
+// | BGP                                | Enables support for BGP | odl-bgpcep-bgp-all | all
+// | CAPWAP                             | Enables control of supported wireless APs | odl-capwap-ac-rest | all
+// | DIDM                               | Device Identification and Driver Management | odl-didm-identification-api, odl-didm-identification, and odl-didm-drivers-api | all
+// | Group Based Policy                 | Enable Endpoint Registry and Policy Repository REST APIs and associated functionality for Group Based Policy | odl-groupbasedpolicy-ofoverlay | self+all
+// | Internet of Things Data Management | Enables support for the oneM2M specification | odl-iotdm-onem2m | all
+// | L2 Switch                          | Provides L2 (Ethernet) forwarding across connected OppenFlow switches and support for host tracking | odl-l2switch-switch-ui | self+all
+// | LACP                               | Enable support for the Link Aggregation Control Protocol | odl-lacp-ui | self+all
+// | LISP Flow Mapping                  | Enable LISP control plane services including the mapping system services REST API and LISP protocol SB plugin | odl-lispflowmapping-all | all
+// | MD-SAL Clustering                  | Provides support for operating a cluster of OpenDaylight instances | odl-mdsal-clustering | special
+// | NETCONF over SSH                   | Provides support to manage NETCONF-enabled devices over SSH | odl-netconf-connector-ssh | all
+// | Network Intent Composition         | Enable support for high-level network control via intents | odl-nic-core | self+all
+// | OVS Management                     | Enables OVS management using OVSDB plugin and its associated OVSDB northbound APIs | odl-ovsdb-all | all
+// | OVSDB OpenStack Neutron            | OpenStack Network Virtualization using OpenDaylight's OVSDB support | odl-ovsdb-openstack | self+all
+// | OpFlex                             | Enables support for the OpFlex protocol | special (see user/developer guide) | all
+// | OpenFlow Flow Programming          | Enables discovery and control of OpenFlow switches and the topology between them | odl-openflowplugin-flow-services-ui | all
+// | OpenFlow Table Type Patterns       | Allows OpenFlow Table Type Patterns to be manually associated with network elements | odl-ttp-all | all
+// | PCEP                               | Enables support for PCEP | odl-bgpcep-pcep-all | all
+// | Packetcable PCMM                   | Enables flow-based dynamic QoS management of CMTS using in the DOCSIS infrastructure | odl-packetcable-all | self+all
+// | Packetcable Policy Server          | Enables support for the PacketCable policy server | odl-packetcable-policy-server-all | self+all
+// | RESTCONF API Support               | Enables REST API access to the MD-SAL including the data store | odl-restconf | all
+// | SDN Interface                      | Provides support for interaction and sharing of state between (non-clustered) OpenDaylight instances | odl-sdninterfaceapp-all | all
+// | SFC over L2                        | Supports implementing SFC using Layer 2 forwarding | odl-sfcofl2 | self+all
+// | SFC over LISP                      | Supports implementing SFC using LISP | odl-sfclisp | all
+// | SFC over REST                      | Supports implementing SFC using REST CRUD operations on network elements | odl-sfc-sb-rest | all
+// | SFC over VXLAN                     | Supports implementing SFC using VXLAN tunnels | odl-sfc-ovs | self+all
+// | SNMP Plugin                        | Enables monitoring and control of network elements via SNMP | odl-snmp-plugin | all
+// | SNMP4SDN                           | Enables OpenFlow-like control of network elements via SNMP | odl-snmp4sdn-all | all
+// | SSSD Federated Authentication      | Enable support for federated authentication using SSSD | odl-aaa-sssd-plugin | all
+// | Secure Networking Bootstrap        | Defines a SNBI domain and associated white lists of devices to be accommodated to the domain | odl-snbi-all | self+all
+// | Secure tag eXchange Protocol (SXP) | Enables distribution of shared tags to network devices | odl-sxp-controller | all
+// | Service Flow Chaining (SFC)        | Enables support for applying chains of network services to certain traffic | odl-sfc-all | all
+// | Time Series Data Repository (TSDR) | Enables historical tracking of OpenFlow statistics | odl-tsdr-all | self+all
+// | Topology Processing Framework      | Enables merged and filtered views of network topologies | odl-topoprocessing-framework | all
+// | Unified Secure Channel (USC)       | Enables support for secure, remote connections to network devices | odl-usc-channel-ui | all
+// | VPN Service                        | Enables support for OpenStack VPNaaS | odl-vpnservice-core | all
+// | VTN Manager                        | Enables Virtual Tenant Network support | odl-vtn-manager-rest | self+all
+// | VTN Manager Neutron                | Enables OpenStack Neutron support of VTN Manager | odl-vtn-manager-neutron | self+all
+// |====
+//
+// In the table a compatibility value of *all* means that it can be run with other features. A value of *self+all* indicates that the feature can be installed with other features with a value of *all*, but may interact badly other features with a value of *self+all*.
+//
+// .Experimental Beryllium Components
+// [options="header",cols="18%,50%,18%,14%"]
+// |====
+// | Component Name                     | Component Description | Karaf feature name | Compatibility
+// | Persistence                        | Enables saving of data to external databases | odl-persistence-api | self+all
+// | Reservation                        | Enables bandwidth calendaring using the TL1 protocol | odl-reservation-models | all
+// |====
 
 ==== Listing available features
 To find the complete list of Karaf features, run the following command:
